# MonoBrowser

./: .gitignore  LICENSE.md  MonoBrowser.spec  README.md  browser.py  build.sh  main.py  pages.py  pyproject.toml  utils.py  version.html
about-pages/: newtab.html
src/monobrowser/: about_pages.py  browser.py  main.py  tab_page.py  utils.py
src/monobrowser/about-pages/: settings.html
