[project]
name = "MonoBrowser"
version = "0.1.0"
description = "A minimal Browser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
